--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
 Full\ Spark/start_docker.sh
-Full\ Spark/.ipynb_checkpoints
+Full\ Spark/source/.ipynb_checkpoints
 Full\ Spark/source/spark-warehouse
