--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ Full\ Spark/start_docker.sh
 Full\ Spark/source/.ipynb_checkpoints
 Full\ Spark/source/spark-warehouse
 .ipynb_checkpoints
+start_docker.sh
